@@ -1,5 +1,10 @@
 2009-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
 
+	* flumotion/component/plugs/requestmodifier.py:
+	Fix set use as per previous commits.
+
+2009-07-20  Zaheer Abbas Merali  <zaheerabbas at merali dot org>
+
 	* flumotion/admin/gtk/configurationassistant.py:
 	* flumotion/common/fxml.py:
 	* flumotion/component/combiners/switch/switch.py:
